tps calculated and printed